we did put back the padding, so we need to have the align correction stay 2px as well

--- a/LCARStrek/global/popup.css
+++ b/LCARStrek/global/popup.css
@@ -20,7 +20,7 @@ panel {
 
 menupopup > menu > menupopup {
   /* align submenus */
-  margin-top: -1px;
+  margin-top: -2px;
 }
 
 /* ::::: arrow panel ::::: */
